# AreaCalculator

./: CMakeLists.txt
AreaCalculatorApp/: AreaCalculatorApp.cpp
AreaCalculatorLib/: Circle.cpp  Circle.h  Square.cpp  Square.h
AreaCalculatorUnitTest/: AreaCalculatorUnitTest.cpp
